# DACEx

./: .gitignore  AUTHORS.md  CMakeLists.txt  CMakePresets.json  NOTICE  README.md
.github/workflows/: ci.yml  docs.yml
docs/: Doxyfile  mainpage.md
examples/: Gaussian_2D_example.cpp  Gaussian_example.cpp
include/dacex/: Chebyshev.h  DACEx.h  Polynomial.h  Taylor.h
plotting/: plot_gaussian_1d.py  plot_gaussian_2d.py
src/: Chebyshev.cpp  Taylor.cpp
tests/: Chebyshev_test.cpp
